--- a/src/Components/Main.module.css
+++ b/src/Components/Main.module.css
@@ -439,24 +439,106 @@ height: 100%;
 }
 
 /*Footer section*/
-.footer_section {
-  font-weight: 500;
+
+.info_section {
+  background-color: white;
+  color: #453c79;
+  padding: 75px 0 10px 0;
+}
+
+.info_section .row>div {
+  margin-bottom: 25px;
+}
+
+.info_section h5 {
+  margin-bottom: 25px;
+  font-size: 24px;
+}
+
+.info_section .info_logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding: 20px;
-  background-color: #101010;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
 }
 
-.footer_section p {
-  color: rgba(254, 254, 255, 0.7);
-  margin: 0;
-  text-align: center;
+.info_section .info_logo .navbar-brand {
+  padding: 0;
+  margin-bottom: 20px;
 }
 
-.footer_section a {
-  color: rgba(254, 254, 255, 0.7);
+.info_section .info_logo .navbar-brand span {
+  font-size: 24px;
+  color: #453c79;
+}
+
+.info_section .info_links ul {
+  padding: 0;
+}
+
+.info_section .info_links ul li {
+  list-style-type: none;
+}
+
+.info_section .info_links ul li a {
+  color: #453c79;
+}
+
+.info_section .info_contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.info_section .info_contact a {
+  color:#231A53;
+  margin-bottom: 10px;
+}
+
+.info_section .info_contact a i {
+  font-size: 20px;
+  margin-right: 5px;
+}
+
+.info_section .info_form form input {
+  outline: none;
+  border: none;
+  width: 100%;
+  padding: 7px 10px;
+  border-radius: 30px;
+}
+
+.info_section .info_form form button {
+  padding: 8px 35px;
+  outline: none;
+  border: none;
+  color: #1c1c1c;
+  background: #f1db25;
+  border-radius: 30px;
+  margin-top: 15px;
+  text-transform: uppercase;
+}
+
+.info_section .info_form .social_box {
+  margin-top: 25px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.info_section .info_form .social_box a {
+  margin-right: 10px;
+  color: #231A53;
+  font-size: 20px;
 }
