--- a/src/Components/Main.module.css
+++ b/src/Components/Main.module.css
@@ -715,11 +715,12 @@ height: 100%;
   justify-content: center;
   align-items: center;
   padding: 10px;
+  border:none;
 }
 
 input{
   height: 45px;
-  width: 40%;
+  width: 80%;
   border-radius: 20px;
   padding: 5px;
   border-style: none;
@@ -728,7 +729,7 @@ input{
 textarea{
   padding: 5px;
   /* height: 70px; */
-  width: 40%;
+  width: 80%;
   padding: 5px;
   border-radius: 20px;
 }
@@ -761,6 +762,7 @@ textarea{
   left: 0;
   right: 0;
   top:280%;
+  transition: .9s ease;
   /* background-color: rgba(0, 0, 0, 0.5); Optional: Add a background color for better visibility */
 }
 
